force-app/main/default/objects/Forecast_Permission__mdt/Forecast_Permission__mdt.object-meta.xml
<CustomObject>
    <description>Permission to display records on Forecast Input page and retrieve the report by My Customer, My Team, or My Account Team</description>
    <label>Forecast Permission</label>
    <pluralLabel>Forecast Permissions</pluralLabel>
</CustomObject>