force-app/main/default/objects/Forecast_Permission__mdt/fields/My_Customer_Accessibility__c.field-meta.xml
<CustomField>
    <fullName>My_Customer_Accessibility__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Limit of capability that user can access customer&apos;s information</inlineHelpText>
    <label>My Customer Accessibility</label>
    <type>Checkbox</type>
</CustomField>