force-app/main/default/objects/Forecast_Permission__mdt/fields/My_Team_Account_Team_Accessibility__c.field-meta.xml
<CustomField>
    <fullName>My_Team_Account_Team_Accessibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>My Team by Role</description>
    <label>My Team-Account Team Accessibility</label>
    <type>Checkbox</type>
</CustomField>