force-app/main/default/objects/Forecast_Permission__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <inlineHelpText>User&apos;s Profile</inlineHelpText>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>